AUGREL/src/objects/Financial_Account__c.object
<CustomObject>
    <fields>
        <fullName>PrivacyElection_Affiliate_Sharing_Source__c</fullName>
        <description>Affiliate Sharing Source Flag</description>
        <label>PrivacyElection Affiliate Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elec_Affiliate_Marketing_Source__c</fullName>
        <description>Affiliate Marketing  Source Flag</description>
        <label>Privacy Elec Affiliate Marketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elect_Third_Party_Sharing_Source__c</fullName>
        <description>Third Party Sharing Source Flag</description>
        <label>Privacy Elect Third Party Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Marketing__c</fullName>
        <description>Affiliate Marketing Flag</description>
        <label>Affiliate Marketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Sharing__c</fullName>
        <description>Affiliate Sharing Flag</description>
        <label>Affiliate Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership_Source__c</fullName>
        <description>Dealer Privacy Source Flag</description>
        <label>Privacy Election Dealership Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership__c</fullName>
        <description>Dealer Privacy Flag</description>
        <label>Toyota/Lexus Dealer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing_Source__c</fullName>
        <description>FCRA Sharing Source Flag</description>
        <label>Privacy Election FCRA Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing__c</fullName>
        <description>FCRA Sharing Flag</description>
        <label>Credit App/Rpt</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing_Source__c</fullName>
        <description>Telemarketing Source Flag</description>
        <label>Privacy Election Telemarketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing__c</fullName>
        <description>Telemarketing Flag</description>
        <label>TFS Telemarketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Third_Party_Sharing__c</fullName>
        <description>Third Party Sharing Flag</description>
        <label>3rd Party</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_State_Code__c</fullName>
        <description>Privacy State Code</description>
        <label>Privacy State Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Option_Amount__c</fullName>
        <description>Purchase option</description>
        <label>Purchase Option Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type_Match__c</fullName>
        <description>Compares the RecordType Name to the Finance Account Product Type. Returns TRUE when a match, otherwise FALSE.</description>
        <formula>IF( RecordType.Name = TEXT( Finance_Account_Product_Type__c), TRUE, FALSE)</formula>
        <inlineHelpText>Compares the RecordType Name to the Finance Account Product Type. Returns TRUE when a match, otherwise FALSE.</inlineHelpText>
        <label>Record Type Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recovery_Code_Formula__c</fullName>
        <formula>IF(Recovery_Code__c &lt;&gt; &quot;&quot;, Recovery_Code__c &amp; &quot; - &quot;, &quot;&quot;) &amp; Recovery_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recovery Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Code__c</fullName>
        <label>Recovery Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Recovery Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refi_Pitch_Eligible_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>  This custom field is leveraged to identify if the Refinance Auto Loyalty offer is available for a Customer. Its populated by ETL</description>
        <label>Refi Pitch Eligible Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refi_Pitch_Treatment__c</fullName>
        <description>  This custom field is leverage to capture whether the Auto Loyalty offer was accepted by the Customer</description>
        <label>Refi Pitch Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Treatment Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Not Provided</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <description>SRC: Host - IR (Information Repository)
INT: Data Feed from IR
Trans: &lt;Y/N&gt;
BU: RL
FD: Unearned rent charges to be refunded to the customer on a lease payoff</description>
        <label>Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <description>Region number</description>
        <label>Region Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinstatements__c</fullName>
        <formula>CASE(Risk_Strategy_Code_2__c,
&quot;AAA&quot;, &quot;RST:APPR&quot;,
&quot;CMN&quot;, &quot;CMNO - Conditionally Mandatory State - High Risk&quot;,
&quot;CMY&quot;, &quot;CMYS - Conditionally Mandatory State - Low Risk&quot;,
&quot;DSN&quot;, &quot;DSNO - Discretionary State High Risk - TL Approval Rqrd&quot;,
&quot;DSY&quot;, &quot;DSYS - Discretionary State Low Risk&quot;,
&quot;MDN&quot;, &quot;MDNO - Mandatory High Risk&quot;,
&quot;MDY&quot;, &quot;MDYS - Mandatory Low Risk&quot;,
Risk_Strategy_Code_2__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reinstatements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Full_Term_Date__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Used as an input to determine if maturity date is within 30 days, which is equivalent to a full term for a lease in a repo</description>
        <formula>TODAY() + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repo Full Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repossession__c</fullName>
        <formula>CASE(Risk_Strategy_Code_3__c,
&quot;CND&quot;, &quot;COND - Assign based on account status&quot;,
&quot;NOR&quot;, &quot;NOR - Do not assign&quot;,
&quot;RPO&quot;, &quot;RCVR - Assign for repossession&quot;,
&quot;XXX&quot;, &quot;&quot;,
&quot;&quot;, &quot;COND - Assign based on account status&quot;,
Risk_Strategy_Code_3__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repossession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversal_Code__c</fullName>
        <description>Reversal code</description>
        <label>Reversal Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Maturity_Date__c</fullName>
        <label>Revised Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rewrites__c</fullName>
        <formula>CASE(Risk_Strategy_Code_4__c,
&quot;AAA&quot;, &quot;APPR -  Approved if Conditions met&quot;,
&quot;DDD&quot;, &quot;DENY - Decline&quot;,
Risk_Strategy_Code_4__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rewrites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code_1__c</fullName>
        <label>Risk Strategy Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code_2__c</fullName>
        <label>Risk Strategy Code 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code_3__c</fullName>
        <label>Risk Strategy Code 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code__c</fullName>
        <label>Risk Strategy Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Description_1__c</fullName>
        <label>Risk Strategy Description 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Description_2__c</fullName>
        <label>Risk Strategy Description 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Description_3__c</fullName>
        <label>Risk Strategy Description 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Code__c</fullName>
        <description>Sale Code</description>
        <label>Sale Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Amount__c</fullName>
        <description>The amount of security deposit being held by the lessor as security on the lease</description>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Signature_Required__c</fullName>
        <formula>IF(
 OR(
  AND(
   RecordType.DeveloperName = &apos;Retail&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),
   NOT(ISBLANK(Primary_Garage_State__c)),
   CONTAINS($Label.Signatory_States_Retail, Dealership__r.BillingState),
   CONTAINS($Label.Signatory_States_Retail, Primary_Garage_State__c)
  ),
  AND(
   RecordType.DeveloperName = &apos;Lease&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),
   NOT(ISBLANK(Primary_Garage_State__c)),
   CONTAINS($Label.Signatory_States_Lease, Dealership__r.BillingState),
   CONTAINS($Label.Signatory_States_Lease, Primary_Garage_State__c)
  )
 ), 
 &quot;Yes - Both&quot;,
 IF(
  OR(
  AND(
   RecordType.DeveloperName = &apos;Retail&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),   
   CONTAINS($Label.Signatory_States_Retail, Dealership__r.BillingState)
  ),
  AND(
   RecordType.DeveloperName = &apos;Lease&apos;,
   NOT(ISBLANK(Dealership__r.BillingState)),
   CONTAINS($Label.Signatory_States_Lease, Dealership__r.BillingState)
  )
 ), 
  &quot;Yes - Dealer&quot;,
  IF(
   OR(
    AND(
     RecordType.DeveloperName = &apos;Retail&apos;,
     NOT(ISBLANK(Primary_Garage_State__c)),
     CONTAINS($Label.Signatory_States_Retail, Primary_Garage_State__c)
    ),
    AND(
     RecordType.DeveloperName = &apos;Lease&apos;,
     NOT(ISBLANK(Primary_Garage_State__c)),
     CONTAINS($Label.Signatory_States_Lease, Primary_Garage_State__c)
    )
   ), 
   &quot;Yes - Address&quot;,
   &quot;No&quot;
  )
 )
)</formula>
        <label>Signature Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling__c</fullName>
        <formula>CASE(Flag_Special_Handling__c,
&quot;M&quot;, &quot;M - CS Military&quot;,
&quot;N&quot;, &quot;N - CX Military&quot;,
&quot;O&quot;, &quot;O - CS &amp; CX Military&quot;,
&quot;S&quot;, &quot;S - CS SCRA Qualified&quot;,
&quot;T&quot;, &quot;T - CX SCRA Qualified&quot;,
&quot;U&quot;, &quot;U - CS &amp; CX SCRA Qualified&quot;,
&quot;0&quot;, &quot;0 - CS No longer MILI SCRA&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Handling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Local__c</fullName>
        <description>Local tax amount</description>
        <label>Tax Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Payment__c</fullName>
        <description>Lease payment tax</description>
        <label>Tax Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Sales_Payable__c</fullName>
        <description>Lease payable use tax</description>
        <label>Tax Sales Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Months_Expired__c</fullName>
        <description>Expired terms</description>
        <label>Term Months Expired</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Months_Original__c</fullName>
        <description>Original term</description>
        <label>Term Months Original</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Months_Remaining__c</fullName>
        <description>Remaining term</description>
        <label>Term Months Remaining</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Tracker__c</fullName>
        <description>Formula field to track the Title Status based on the FA Account Status, Title Cases, and Title Status</description>
        <formula>IF(
	TEXT(Finance_Account_Status__c) = &apos;Open&apos;,
	IMAGE(&apos;/resource/TitleOne&apos;, &apos;Account Open&apos;), 
   	IF(
		OR(TEXT(Finance_Account_Status__c) = &apos;Close&apos;, TEXT(Finance_Account_Status__c) = &apos;Closed&apos;) &amp;&amp; ISBLANK(Title__c),
		IMAGE(&apos;/resource/TitleZero&apos;,&apos;Title Record Missing&apos;),
		IF(
			OR(TEXT(Finance_Account_Status__c) = &apos;Close&apos;, TEXT(Finance_Account_Status__c) = &apos;Closed&apos;) 
&amp;&amp; TEXT(Title__r.Title_Status__c) = &apos;Released&apos;,
			IMAGE(&apos;/resource/TitleThree&apos;,&apos;Title Sent&apos;),
      			IF(
				OR(TEXT(Finance_Account_Status__c) = &apos;Close&apos;, TEXT(Finance_Account_Status__c) = &apos;Closed&apos;) &amp;&amp; 
				OR(
					TEXT(Title__r.Title_Status__c) = &apos;Pending-Not Yet Received&apos;,
					TEXT(Title__r.Title_Status__c) = &apos;In House&apos;,
					TEXT(Title__r.Title_Status__c) = &apos;Held&apos;,
					TEXT(Title__r.Title_Status__c) = &apos;Reserved&apos;,
					TEXT(Title__r.Title_Status__c) = &apos;Lost&apos;,
					TEXT(Title__r.Title_Status__c) = &apos;Pulled&apos;,
					TEXT(Title__r.Title_Status__c) = &apos;Transferred&apos;
				),
				IMAGE(&apos;/resource/TitleTwo&apos;,&apos;Title Processing&apos;),
				IMAGE(&apos;/resource/TitleError&apos;,&apos;Processing Error&apos;)
			)
		)
	)
)</formula>
        <label>Title Tracker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Latest Title on the Financial Account</description>
        <label>Title</label>
        <referenceTo>Title__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Due__c</fullName>
        <formula>IF(VALUE(History_Counter_Days_Past_Due__c) = 0,  
   Charges_Late__c + Charges_Miscellaneous__c +  Payment_Amount_Next__c , 
    IF(VALUE(History_Counter_Days_Past_Due__c) &gt;= 1, 
      Charges_Late__c + Charges_Miscellaneous__c + Payment_Amount_Past_Due__c +
      IF(AND(RecordType.Name = &quot;Retail&quot;, Payment_Date_Past_Due__c &lt; TODAY(), TODAY() &lt; Maturity_Date__c), 
         Payment_Amount_Scheduled__c ,  
		 IF(AND(RecordType.Name = &quot;Retail&quot;, OR(ISBLANK(Payment_Date_Past_Due__c ) , ISBLANK(Payment_Amount_Past_Due__c)),TODAY() &lt; Maturity_Date__c), 
			Payment_Amount_Next__c,  
			IF(AND(RecordType.Name = &quot;Lease&quot;,Payment_Date_Past_Due__c &lt; TODAY()), 
				Payment_Amount_Scheduled__c , 
				IF(AND(RecordType.Name = &quot;Lease&quot;, OR(ISBLANK(Payment_Date_Past_Due__c ) , ISBLANK(Payment_Amount_Past_Due__c))), 
					Payment_Amount_Next__c, 
				0)))),
         0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Plus_Next__c</fullName>
        <description>Expired terms</description>
        <label>Total Plus Next</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Code_Description__c</fullName>
        <label>Type Code Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Code__c</fullName>
        <label>Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Late_Charge__c</fullName>
        <description>Unpaid late charge</description>
        <label>Unpaid Late Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unpaid_Miscellaneous_Charge__c</fullName>
        <description>Unpaid miscellaneous charge</description>
        <label>Unpaid Miscellaneous Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Remarks__c</fullName>
        <description>User remarks</description>
        <label>User Remarks</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Charge_Per_Mile__c</fullName>
        <description>Charge per mileage</description>
        <label>Vehicle Charge Per Mile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Flag_Low_Mileage__c</fullName>
        <description>Low mileage flag</description>
        <label>Vehicle Flag Low Mileage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Insurance_Company__c</fullName>
        <description>Insurance company</description>
        <label>Vehicle Insurance Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Insurance_Policy__c</fullName>
        <description>Insurance policy</description>
        <label>Vehicle Insurance Policy</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage_Allowance__c</fullName>
        <description>Allowed mileage</description>
        <label>Vehicle Mileage Allowance</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage_Start__c</fullName>
        <description>Start mileage</description>
        <label>Vehicle Mileage Start</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Recovery_Type__c</fullName>
        <description>SRC: Salesforce , Collections 
INT: 
Trans: 
BU: RMS 
FD: Type of Recovery</description>
        <label>Vehicle Recovery Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Involuntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Sale_Type__c</fullName>
        <description>Vehicle Sale Type</description>
        <label>Vehicle Sale Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WUSP_Account_Number__c</fullName>
        <description>***Populated by a workflow rule***

Contains the WUSP formatted account number.</description>
        <label>WUSP Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbCollectionsFA__c</fullName>
        <description>Sets the value to true if the account has past due + charges &gt; 0, days past due in the range of 13 to 90, and in collections list status A, C or P. Otherwise the value is false&gt;</description>
        <formula>IF(AND( Past_Due_Charges__c &gt;0,
AND(VALUE(History_Counter_Days_Past_Due__c) &gt;=13,
VALUE(History_Counter_Days_Past_Due__c) &lt;= 90)
,OR(Collection_List_Status_1__c =&quot;A&quot;
,Collection_List_Status_1__c =&quot;C&quot;
,Collection_List_Status_1__c =&quot;P&quot;)
)
,TRUE,FALSE)</formula>
        <inlineHelpText>Sets the value to true if the account has past due + charges &gt; 0, days past due in the range of 13 to 90, and in collections list status A, C or P. Otherwise the value is false&gt;</inlineHelpText>
        <label>cbCollectionsFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iVault_Account_Number__c</fullName>
        <description>***Populated by a workflow rule*** 

Contains the iVault formatted account number.</description>
        <label>iVault Account Number</label>
        <type>TextArea</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>Recently_Loaded</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Collateral__c</columns>
        <columns>Loan_Original_Term__c</columns>
        <columns>Contract_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Recently Loaded</label>
    </listViews>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>Lease</fullName>
        <active>true</active>
        <description>Lease type of account</description>
        <label>Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Loan type of account</description>
        <label>Retail</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Credit_Dispute_Waiver_Only_Set_Once</fullName>
        <active>true</active>
        <description>A Credit Dispute Waiver can only be set once on the FA.</description>
        <errorConditionFormula>AND( 
PRIORVALUE(  Credit_Dispute_Waiver__c  ) = TRUE, 
ISCHANGED( Credit_Dispute_Waiver__c ), NOT($Permission.Credit_Dispute_Resolution_Team) )</errorConditionFormula>
        <errorDisplayField>Credit_Dispute_Waiver__c</errorDisplayField>
        <errorMessage>A Credit Dispute waiver can only be granted once for the life of the Financial Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Financial_Account_Name_Change</fullName>
        <active>true</active>
        <description>Financial account name cannot be locked down via page layout or FLS, so validation rule is needed to prevent end users from changing the field value. Only integration or a system administrator may change the name.</description>
        <errorConditionFormula>AND(
  ISCHANGED(Name),
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;)
)</errorConditionFormula>
        <errorMessage>The record name (Financial Account Name) cannot be changed. Cancel your changes and re-edit without modifying the value of the Financial Account Name field.</errorMessage>
    </validationRules>
</CustomObject>